# Cpp_Algorithm

./: CMakeLists.txt  main.cpp
includes/header/: baekjoon_math.h
includes/sources/: baekjoon_math.cpp
